force-app/main/default/objects/Opportunity/fields/AV_AnalyticsStage__c.field-meta.xml
<CustomField>
    <fullName>AV_AnalyticsStage__c</fullName>
    <formula>IF(ISPICKVAL(StageName,&apos;Potencial&apos;),&apos;Potenciales&apos;,
IF(ISPICKVAL(StageName,&apos;Vencido&apos;),&apos;Vencidas&apos;,
IF(ISPICKVAL(StageName,&apos;En gestión/insistir&apos;),&apos;Planificadas&apos;,
IF(
ISPICKVAL(StageName,&apos;No apto&apos;)
|| ISPICKVAL(StageName,&apos;Con venta&apos;) 
|| ISPICKVAL(StageName,&apos;Cerrado positivo&apos;) 
|| ISPICKVAL(StageName,&apos;No interesado&apos;) 
,&apos;Gestionadas&apos;,&apos;&apos;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Etapa Analytics</label>
    <type>Text</type>
</CustomField>