force-app/main/default/objects/Opportunity/fields/AV_ApiGCF_DateSend__c.field-meta.xml
<CustomField>
    <fullName>AV_ApiGCF_DateSend__c</fullName>
    <description>Save the date when the request was send</description>
    <encryptionScheme>None</encryptionScheme>
    <label>API GCF - Date time</label>
    <type>DateTime</type>
</CustomField>