force-app/main/default/objects/Opportunity/fields/AV_ApiGCF_ResponseStatusCode__c.field-meta.xml
<CustomField>
    <fullName>AV_ApiGCF_ResponseStatusCode__c</fullName>
    <description>Save the status code of the response from the GCF API (Opportunities)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>API GCF - Status Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>