force-app/main/default/objects/Opportunity/fields/AV_assignContact__c.field-meta.xml
<CustomField>
    <fullName>AV_assignContact__c</fullName>
    <formula>Account.AV_EAPGestor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gestor asignado</label>
    <type>Text</type>
</CustomField>