force-app/main/default/objects/Opportunity/fields/AV_AssignedManagerSales__c.field-meta.xml
<CustomField>
    <fullName>AV_AssignedManagerSales__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Gestor asignado a la venta</description>
    <label>Empleado de la venta</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Empleado de la venta)</relationshipLabel>
    <relationshipName>Opportunities4</relationshipName>
    <type>Lookup</type>
</CustomField>