force-app/main/default/objects/Opportunity/fields/AV_BatchProcessChangeStatus__c.field-meta.xml
<CustomField>
    <fullName>AV_BatchProcessChangeStatus__c</fullName>
    <description>Campo para crear indice batch de cambio automatico de opp</description>
    <formula>IF(
ISBLANK(AV_ExternalID__c),
&apos;NoToBeProcess&apos;,
IF(
AND(
NOT(ISBLANK(AV_ExternalID__c)),
OR(
ISPICKVAL(StageName, &apos;Potencial&apos;),
ISPICKVAL(StageName, &apos;En gestión/insistir&apos;)
)
),
&apos;ToBeProcess&apos;,
AV_ExternalID__c
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proceso Batch - Cambio Estado</label>
    <type>Text</type>
</CustomField>