force-app/main/default/objects/Opportunity/fields/AV_BlankField__c.field-meta.xml
<CustomField>
    <fullName>AV_BlankField__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>󠀠</label>
    <length>255</length>
    <type>Text</type>
</CustomField>