force-app/main/default/objects/Opportunity/fields/AV_ByPassOpportunity_VR__c.field-meta.xml
<CustomField>
    <fullName>AV_ByPassOpportunity_VR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ByPass para las validation rules de Opportunity.</description>
    <label>AV_ByPassOpportunity_VR</label>
    <type>Checkbox</type>
</CustomField>