force-app/main/default/objects/Opportunity/fields/AV_ByProduct__c.field-meta.xml
<CustomField>
    <fullName>AV_ByProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subproducto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Opportunities (Subproducto)</relationshipLabel>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>