force-app/main/default/objects/Opportunity/fields/AV_CancellationDateSales__c.field-meta.xml
<CustomField>
    <fullName>AV_CancellationDateSales__c</fullName>
    <description>Fecha de cancelación de una Oportunidad con venta</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha de cancelación</label>
    <type>Date</type>
</CustomField>