force-app/main/default/objects/Opportunity/fields/AV_CenterIndex__c.field-meta.xml
<CustomField>
    <fullName>AV_CenterIndex__c</fullName>
    <formula>AV_Center__c &amp; &quot;-&quot; &amp; RecordType.DeveloperName &amp; &quot;-&quot; &amp; TEXT(StageName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AV_CenterIndex</label>
    <type>Text</type>
</CustomField>