force-app/main/default/objects/Opportunity/fields/AV_CentroOrigen__c.field-meta.xml
<CustomField>
    <fullName>AV_CentroOrigen__c</fullName>
    <description>Centro de origen de la oportunidad</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Oficina alta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>