force-app/main/default/objects/Opportunity/fields/AV_ClienteConfidencial__c.field-meta.xml
<CustomField>
    <fullName>AV_ClienteConfidencial__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicador para comprobar si el cliente asociado es confidencial o no.
Se actualiza desde el Batch de Confidenciales</description>
    <label>Cliente confidencial</label>
    <type>Checkbox</type>
</CustomField>