force-app/main/default/objects/Opportunity/fields/AV_ClientProduct__c.field-meta.xml
<CustomField>
    <fullName>AV_ClientProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Almacena la ID del registro de ProductoFicha-Cliente asociado a la oportunidad</description>
    <label>Producto Cliente</label>
    <referenceTo>AV_ProductClient__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>