force-app/main/default/objects/Opportunity/fields/AV_Comentarios__c.field-meta.xml
<CustomField>
    <fullName>AV_Comentarios__c</fullName>
    <description>Comentario</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Comentario</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>