force-app/main/default/objects/Opportunity/fields/AV_CommentLastModifiedBy__c.field-meta.xml
<CustomField>
    <fullName>AV_CommentLastModifiedBy__c</fullName>
    <description>Almacena el nombre y la oficina del empleado que ha modificado los comentarios del opprtunity por última vez.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Comentario modificado por</label>
    <length>255</length>
    <type>Text</type>
</CustomField>