force-app/main/default/objects/Opportunity/fields/AV_Concepto3__c.field-meta.xml
<CustomField>
    <fullName>AV_Concepto3__c</fullName>
    <description>Concepto 3</description>
    <encryptionScheme>None</encryptionScheme>
    <label>&gt;</label>
    <length>255</length>
    <type>Text</type>
</CustomField>