force-app/main/default/objects/Opportunity/fields/AV_Contrato__c.field-meta.xml
<CustomField>
    <fullName>AV_Contrato__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contrato</label>
    <type>TextArea</type>
</CustomField>