force-app/main/default/objects/Opportunity/fields/AV_Cuota__c.field-meta.xml
<CustomField>
    <fullName>AV_Cuota__c</fullName>
    <description>Cuota del producto</description>
    <label>Importe Cuota</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>