force-app/main/default/objects/Opportunity/fields/AV_EmpleadoAlta__c.field-meta.xml
<CustomField>
    <fullName>AV_EmpleadoAlta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Empleado que ha dado de alta la oportunidad</description>
    <label>Empleado Alta</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (AV_EmpleadoAlta)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>