force-app/main/default/objects/Opportunity/fields/AV_EmpleadoModificacion__c.field-meta.xml
<CustomField>
    <fullName>AV_EmpleadoModificacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Empleado que ha modificado la oportunidad</description>
    <label>Empleado última Modificación</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (AV_EmpleadoModificacion)</relationshipLabel>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>