force-app/main/default/objects/Opportunity/fields/AV_EmployeeCustomer__c.field-meta.xml
<CustomField>
    <fullName>AV_EmployeeCustomer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cliente empleado</label>
    <type>Checkbox</type>
</CustomField>