force-app/main/default/objects/Opportunity/fields/AV_Entidad__c.field-meta.xml
<CustomField>
    <fullName>AV_Entidad__c</fullName>
    <description>Entidad</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Entidad/Compañía</label>
    <length>255</length>
    <type>Text</type>
</CustomField>