force-app/main/default/objects/Opportunity/fields/AV_FechaActivacion__c.field-meta.xml
<CustomField>
    <fullName>AV_FechaActivacion__c</fullName>
    <description>Fecha en que la oportunidad pasa de Potencial a cualquier otro estado que no sea vencido.
Si es nulo es que la etapa actual es Potencial.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha Activación</label>
    <type>Date</type>
</CustomField>