force-app/main/default/objects/Opportunity/fields/AV_FechaAviso__c.field-meta.xml
<CustomField>
    <fullName>AV_FechaAviso__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha Aviso</label>
    <type>Date</type>
</CustomField>