force-app/main/default/objects/Opportunity/fields/AV_FechaModificacion__c.field-meta.xml
<CustomField>
    <fullName>AV_FechaModificacion__c</fullName>
    <description>Fecha de modificación de la oportunidad</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha última gestión</label>
    <type>Date</type>
</CustomField>