force-app/main/default/objects/Opportunity/fields/AV_FechaPlanificacion__c.field-meta.xml
<CustomField>
    <fullName>AV_FechaPlanificacion__c</fullName>
    <description>Fecha de planificación de la oportunidad</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha próximo evento</label>
    <type>Date</type>
</CustomField>