force-app/main/default/objects/Opportunity/fields/AV_FechaProximoRecordatorio__c.field-meta.xml
<CustomField>
    <fullName>AV_FechaProximoRecordatorio__c</fullName>
    <description>Fecha de próximo recordatorio de la oportunidad</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha de próxima gestión</label>
    <type>Date</type>
</CustomField>