force-app/main/default/objects/Opportunity/fields/AV_FechaVencimiento__c.field-meta.xml
<CustomField>
    <fullName>AV_FechaVencimiento__c</fullName>
    <description>Fecha de vencimiento de la oportunidad</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha vencimiento en otra entidad</label>
    <type>Date</type>
</CustomField>