force-app/main/default/objects/Opportunity/fields/AV_Gestor__c.field-meta.xml
<CustomField>
    <fullName>AV_Gestor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Gestor asignado a la oportunidad</description>
    <label>Empleado/a Asignado</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>CC_Empleado</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (AV_Gestor)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>