force-app/main/default/objects/Opportunity/fields/AV_IncludeInPrioritizingCustomers__c.field-meta.xml
<CustomField>
    <fullName>AV_IncludeInPrioritizingCustomers__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Al marcar esta opción, se incluirá la oportunidad en “clientes priorizados” la semana correspondiente a la fecha de próxima gestión</inlineHelpText>
    <label>Incluir en “clientes priorizados”</label>
    <type>Checkbox</type>
</CustomField>