force-app/main/default/objects/Opportunity/fields/AV_LicensePlate__c.field-meta.xml
<CustomField>
    <fullName>AV_LicensePlate__c</fullName>
    <description>Almacena la matrícula del vehículo en caso de que el producto de la oportunidad lo requiera.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Matrícula</label>
    <length>50</length>
    <type>Text</type>
</CustomField>