force-app/main/default/objects/Opportunity/fields/AV_MarginSales__c.field-meta.xml
<CustomField>
    <fullName>AV_MarginSales__c</fullName>
    <description>Margen de la venta (importe)</description>
    <label>Margen de la venta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>