force-app/main/default/objects/Opportunity/fields/AV_ModificacionTelefonica__c.field-meta.xml
<CustomField>
    <fullName>AV_ModificacionTelefonica__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo checkbox que si está marcado deberá enviar la información a GCF y dejará completar el contrato</description>
    <label>Modificación telefónica</label>
    <type>Checkbox</type>
</CustomField>