force-app/main/default/objects/Opportunity/fields/AV_NextEventDate__c.field-meta.xml
<CustomField>
    <fullName>AV_NextEventDate__c</fullName>
    <description>Field used to inform the nearest close date of the related events</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Next event date</label>
    <type>Date</type>
</CustomField>