force-app/main/default/objects/Opportunity/fields/AV_NoOfrecerHasta__c.field-meta.xml
<CustomField>
    <fullName>AV_NoOfrecerHasta__c</fullName>
    <description>Fecha hasta la que no se debe ofrecer el PF asociado</description>
    <encryptionScheme>None</encryptionScheme>
    <label>No Ofrecer Hasta</label>
    <type>Date</type>
</CustomField>