force-app/main/default/objects/Opportunity/fields/AV_NumeroDias__c.field-meta.xml
<CustomField>
    <fullName>AV_NumeroDias__c</fullName>
    <description>Número de días</description>
    <label>Número de días</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>