force-app/main/default/objects/Opportunity/fields/AV_NumeroDocumento__c.field-meta.xml
<CustomField>
    <fullName>AV_NumeroDocumento__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Número Documento</label>
    <length>14</length>
    <type>Text</type>
</CustomField>