force-app/main/default/objects/Opportunity/fields/AV_OficinaPrincipalRelacionas__c.field-meta.xml
<CustomField>
    <fullName>AV_OficinaPrincipalRelacionas__c</fullName>
    <formula>Account.AV_OficinaPrincipalRelacionas__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Oficina Principal y Relacionadas</label>
    <type>Text</type>
</CustomField>