force-app/main/default/objects/Opportunity/fields/AV_OfrecerHasta__c.field-meta.xml
<CustomField>
    <fullName>AV_OfrecerHasta__c</fullName>
    <description>Fecha hasta la que se debe ofrecer el PF asociado</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Ofrecer Hasta</label>
    <type>Date</type>
</CustomField>