force-app/main/default/objects/Opportunity/fields/AV_Online__c.field-meta.xml
<CustomField>
    <fullName>AV_Online__c</fullName>
    <description>Online</description>
    <label>Online</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S</fullName>
                <label>PF dado de alta manualmente por el gestor</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>PF no dado de alta manualmente por el gestor</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>