force-app/main/default/objects/Opportunity/fields/AV_PEA2__c.field-meta.xml
<CustomField>
    <fullName>AV_PEA2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PEA2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>