force-app/main/default/objects/Opportunity/fields/AV_PF__c.field-meta.xml
<CustomField>
    <fullName>AV_PF__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PF asociado a la oportunidad</description>
    <label>Producto</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.AV_Nivel__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>Product2.AV_ExternalID__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Opportunities (PF)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>