force-app/main/default/objects/Opportunity/fields/AV_Potencial__c.field-meta.xml
<CustomField>
    <fullName>AV_Potencial__c</fullName>
    <description>Potencialidad de la oportunidad</description>
    <label>Expectativa de venta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VP</fullName>
                <label>Venta programada</label>
            </value>
            <value>
                <fullName>A</fullName>
                <label>Muy Alta</label>
            </value>
            <value>
                <fullName>S</fullName>
                <label>Alta</label>
            </value>
            <value>
                <fullName>M</fullName>
                <label>Media</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>Baja</label>
            </value>
            <value>
                <fullName>N</fullName>
                <isActive>false</isActive>
                <label>No Apto</label>
            </value>
            <value>
                <fullName>X</fullName>
                <isActive>false</isActive>
                <label>No Informado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>