force-app/main/default/objects/Opportunity/fields/AV_PotencialityOpportunity__c.field-meta.xml
<CustomField>
    <fullName>AV_PotencialityOpportunity__c</fullName>
    <formula>if( (AV_PotencialityOpportunityValue__c &gt;= 0 &amp;&amp; AV_PotencialityOpportunityValue__c &lt;= 4999999),

IMAGE(&quot;/resource/AV_FancyStar3&quot;,&quot;Tres estrellas de puntuación&quot;),

IF((AV_PotencialityOpportunityValue__c &gt;= 5000000 &amp;&amp; AV_PotencialityOpportunityValue__c &lt;= 5999999),

IMAGE(&quot;/resource/AV_FancyStar4&quot;,&quot;Cuatro estrellas de puntuación&quot;),

IF(AV_PotencialityOpportunityValue__c &gt;= 6000000,
IMAGE(&quot;/resource/AV_FancyStar5&quot;,&quot;Cinco estrellas de puntuación&quot;)
,&quot;&quot;)


)



)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Potencialidad Oportunidad</label>
    <type>Text</type>
</CustomField>