force-app/main/default/objects/Opportunity/fields/AV_PrioritzingSort__c.field-meta.xml
<CustomField>
    <fullName>AV_PrioritzingSort__c</fullName>
    <label>Ordenación</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>