force-app/main/default/objects/Opportunity/fields/AV_Product__c.field-meta.xml
<CustomField>
    <fullName>AV_Product__c</fullName>
    <description>Almacena la URL del registro de ProductoFicha-Cliente o el nombre del Product2 asociado a la oportunidad dependiendo de si el campo &quot;AV_ClientProduct__c&quot; está informado</description>
    <formula>IF( AV_ClientProduct__c != null,  HYPERLINK( $Setup.AV_IconsFSC__c.AV_Environment__c + AV_ClientProduct__c , AV_ClientProduct__r.AV_ProductoFicha__r.AV_ProductoFicha__r.Name, &apos;_self&apos;) ,  AV_PF__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Producto</label>
    <type>Text</type>
</CustomField>