force-app/main/default/objects/Opportunity/fields/AV_ProductName__c.field-meta.xml
<CustomField>
    <fullName>AV_ProductName__c</fullName>
    <formula>AV_PF__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre del producto</label>
    <type>Text</type>
</CustomField>