force-app/main/default/objects/Opportunity/fields/AV_Producto__c.field-meta.xml
<CustomField>
    <fullName>AV_Producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Producto de la oportunidad</description>
    <label>Producto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>