force-app/main/default/objects/Opportunity/fields/AV_ProductoMifid__c.field-meta.xml
<CustomField>
    <fullName>AV_ProductoMifid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Producto sujeto a normativa mifid</label>
    <type>Checkbox</type>
</CustomField>