force-app/main/default/objects/Opportunity/fields/AV_ProductSales__c.field-meta.xml
<CustomField>
    <fullName>AV_ProductSales__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Producto de la venta</description>
    <label>Producto de la venta</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Opportunities (Producto de la venta)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>