force-app/main/default/objects/Opportunity/fields/AV_Propensity__c.field-meta.xml
<CustomField>
    <fullName>AV_Propensity__c</fullName>
    <description>Un campo de ordenación de oportunidades poder gestionar las más prioritarias primero</description>
    <label>Propensión</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>